--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lodash": "^4.17.21",
     "markdown-it": "^14.1.0",
     "vant": "^4.9.4",
-    "vue": "^3.4.31"
+    "vue": "^3.4.31",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.7",
